# PADT_Laba4

./: Algebra.h  CMakeLists.txt  Generators.h  LazySequence.h  Ordinal.h  RollingWindow.h  Stream.h  Utils.h  main.cpp  tests.cpp
Laba2/: ArraySequence.h  DynamicArray.h  I_enumerable.h  I_enumerator.h  ImmutableArraySequence.h  ImmutableListSequence.h  LinkedList.h  ListSequence.h  MutableArraySequence.h  MutableListSequence.h  Option.h  Sequence.h  SequenceIO.h
